--- a/unit_3/CSS/style.css
+++ b/unit_3/CSS/style.css
@@ -1,33 +1,38 @@
+* { margin:0; padding:0; box-sizing:border-box; }
 body {
+	color:#333;
 	text-align: left;
-	background: url("https://images.pexels.com/photos/434033/pexels-photo-434033.jpeg?cs=srgb&dl=animal-blur-cat-434033.jpg&fm=jpg, https://www.pexels.com/photo/animal-blur-cat-cat-face-434033/");
-	background-size: cover;
-	color: #fff;
-	font-family: Helvetica;
-	font-weight: 500; 
+	font-family: Helvetica, arial, sans-serif;
+	font-weight: 400;
 }
-#header { 
-border-bottom: solid gray 1px;
-overflow:auto;
- }
- #header h1 {
- 	float: left;
- 	display: inline-block;
+header { 
+	border-bottom: solid gray 1px;
+}
+section {
+	padding: 5em 0;
+}
+.logo {
  	font-size: 22px;
- }
- #header ul {
- 	float:right;
- 	list-style-type: none;
- }
- #header ul li {
- 	display: inline-block;
- 	float:left;
- 	margin-right:10px;
- }
- 
-#slogan {
-	font-style: italic;
 }
-#footer {
+nav a {
+ 	display: inline-block;
+ 	padding:1em;
+ 	color: inherit;
+ 	text-decoration: none;
+}
+nav a:hover {
+	background:orange;
+	color:#fff;
+}
+#intro {
+	background: url("../Images/animal-blur-cat-434033.jpg");
+	background-size: cover;
+	font-style: italic;
+	font-size: 2em;
+	height: 85vh;
+	color: #fff;
+	padding: 5em 0 0 5em;
+}
+footer {
 	text-align: center;
 }
