--- a/unit_3/CSS/style.css
+++ b/unit_3/CSS/style.css
@@ -16,14 +16,19 @@ section {
 }
 nav a {
  	display: inline-block;
- 	padding:1em;
+ 	padding:1.5em;
  	color: inherit;
  	text-decoration: none;
 }
 nav a:hover {
-	background:orange;
+	background: gold;
 	color:#fff;
 }
+nav a .social { 
+	width: 40px;
+    	margin-bottom: -10px;
+} 
+
 #intro {
 	background: url("../Images/animal-blur-cat-434033.jpg");
 	background-size: cover;
@@ -39,11 +44,16 @@ nav a:hover {
 	font-size: 1em;
 	font-weight: normal;
 	text-align: center;
-	height: 50vh;
+	height: 65vh;
 	color: inherit;
 	padding: 2em 4em 0 2em;
-
 }
+#fish {
+	background: url("..Images/cat_image.jpg");
+	background-size: cover;
+	height: 50vh;
+}
+
 #solution {
 	background: url("../Images/adorable-animal-cat-54632.jpg");
 	background-size: cover;
