--- a/unit_3/CSS/style.css
+++ b/unit_3/CSS/style.css
@@ -49,7 +49,7 @@ nav a .social {
 	padding: 2em 4em 0 2em;
 }
 #fish {
-	background: url("..Images/cat_image.jpg");
+	background: url("../Images/cat_image.jpg");
 	background-size: cover;
 	height: 50vh;
 }
