css to move things down

--- a/unit_3/CSS/style.css
+++ b/unit_3/CSS/style.css
@@ -76,3 +76,10 @@ nav a .social {
 footer {
 	text-align: center;
 }
+footer nav { 
+	margin-top: 159px;
+	margin-bottom: 100px;  
+} 
+footer nav a { 
+	background: rgba(0,0,0,0.3); 
+} 
