--- a/unit_3/CSS/style.css
+++ b/unit_3/CSS/style.css
@@ -61,7 +61,7 @@ nav a .social {
 	height: 120vh;
 	background-position: center 67%;
 	line-height: 2em;
-	text-align: left;
+	text-align: center;
 	font-size: 20px;
 }
 
@@ -71,14 +71,17 @@ nav a .social {
 	font-size: 18px;
 	height: 90vh;
 	line-height: 2em;
-	text-align: center;
-
+	text-align: left;
+	padding: 2em 4em 4em 4em;
 }
+
 footer {
 	text-align: center;
+	padding-top: 2em;
+	padding-bottom: 2em;
 }
 footer nav { 
-	margin-top: 159px;
+	margin-top: 210px;
 	margin-bottom: 100px;  
 } 
 footer nav a { 
