--- a/unit_3/CSS/style.css
+++ b/unit_3/CSS/style.css
@@ -21,6 +21,8 @@ nav a {
  	padding:1.5em;
  	color: inherit;
  	text-decoration: none;
+ 	font-family: 'Montserrat', sans-serif;
+
 }
 nav a:hover {
 	background: gold;
@@ -79,6 +81,7 @@ footer {
 	text-align: center;
 	padding-top: 2em;
 	padding-bottom: 2em;
+	font-family: 'Montserrat', sans-serif;
 }
 footer nav { 
 	margin-top: 210px;
