--- a/unit_4/CSS/style.css
+++ b/unit_4/CSS/style.css
@@ -51,19 +51,19 @@ nav a .social {
 	height: 90vh;
 	color: black;
 	padding: 2em 4em 0 2em;
-	line-height: 2em;
+	line-height: 1.5em;
 }
 #about h2 { 
 	max-width: 50%;
 	color: white;  
 } 
 #fish {
-	background: url("../Images/cat_image.jpg");
+	background: url("../Images/yarn.jpg");
 	background-size: cover;
-	height: 120vh;
-	background-position: center 67%;
-	line-height: 2em;
-	text-align: center;
+	height: 90vh;
+	background-position: center;
+	line-height: 1.5em;
+	text-align: left;
 	font-size: 20px;
 }
 
@@ -72,7 +72,7 @@ nav a .social {
 	background-size: cover;
 	font-size: 18px;
 	height: 90vh;
-	line-height: 2em;
+	line-height: 1.5em;
 	text-align: left;
 	padding: 2em 4em 4em 4em;
 }
