--- a/unit_4/style.css
+++ b/unit_4/style.css
@@ -38,33 +38,35 @@ nav a .social {
 	background-size: cover;
 	font-size: 20px;
 	text-align: left;
-	height: 120vh;
+	height: 90vh;
 	color: inherit;
 	padding-left: 1em
+	padding-bottom: 1em;
 }
 #about {
 	background: url("../Images/gray_cat.jpg");
 	background-size: cover;
 	background-position: center 100%;
-	font-size: 20px;
+	font-size: 1.25em;
 	text-align: left;
 	height: 90vh;
 	color: black;
 	padding: 2em 4em 0 2em;
-	line-height: 2em;
+	line-height: 1em;
 }
 #about h2 { 
 	max-width: 50%;
 	color: white;  
 } 
+
 #fish {
 	background: url("../Images/yarn.jpg");
 	background-size: cover;
-	height: 120vh;
-	background-position: center 67%;
-	line-height: 2em;
-	text-align: center;
-	font-size: 20px;
+	height: 90vh;
+	background-position: center 100%;
+	line-height: 1.5em;
+	text-align: right;
+	font-size: 1.25em;
 }
 
 #solution {
