--- a/unit_5/CSS/style.css
+++ b/unit_5/CSS/style.css
@@ -28,6 +28,7 @@ section {
 	section#body h2{
 		font-family: 'Montserrat', sans-serif;
 		color: gold;
+		text-align: center;
 	}
 	section#body #cookie {
 		max-width: 900px;
@@ -82,7 +83,7 @@ nav a .social {
 	text-align: left;
 	height: 90vh;
 	color: black;
-	padding: 2em 4em 0 2em;
+	padding: 4em 4em 0 4em;
 	line-height: 1.5em;
 }
 #about h2 { 
@@ -110,21 +111,34 @@ nav a .social {
 	height: 90vh;
 	line-height: 1.5em;
 	text-align: left;
-	padding: 2em 4em 4em 4em;
+	padding: 2em 4em 4em 2em;
 }
 #solution h2 {
 	max-width: 90%
+
+}
+#bottom {
+	text-align: center;
+	padding: 2em;
 }
 
 #cookie {
 	max-height: 1000px;
 	max-width: 1300px;
 }
+#cta {
+	display: black;
+	border-radius: .25em;
+	background: green;
+	color: white;
+	text-decoration: none;
+	padding: .5em;
+}
 
 footer {
 	text-align: center;
-	padding-top: 1em;
-	padding-bottom: 1em;
+	padding-top: 9em;
+	padding-bottom: 5em;
 	font-family: 'Montserrat', sans-serif;
 }
 footer nav { 
