fixed CSS font family

--- a/unit_6/CSS/style.css
+++ b/unit_6/CSS/style.css
@@ -3,8 +3,7 @@
 body {
 	color:#333;
 	text-align: left;
-	font-family: 'Open Sans', sans-serif
-	line-height: 28px;
+	font-family: 'Open Sans', sans-serif;
 	margin: 30px;
 }
 header { 
