--- a/unit_6/CSS/style.css
+++ b/unit_6/CSS/style.css
@@ -101,7 +101,9 @@ nav a .social {
 	width: 40px;
     	margin-bottom: -10px;
 } 
-
+.logoimage { 
+	margin-bottom: -10px; 
+} 
 
 #intro {
 	background: url("../Images/animal-blur-cat-434033.jpg");
