media query for mobile h2

--- a/unit_8/CSS/style.css
+++ b/unit_8/CSS/style.css
@@ -179,4 +179,12 @@ footer nav {
 } 
 footer nav a { 
 	background: rgba(0,0,0,0.3); 
-} 
+}
+
+
+@media all and (max-width: 912px) { 
+	section h2 { 
+		font-size: 13px !important; 
+	} 
+
+}  
