--- a/unit_8/CSS/style.css
+++ b/unit_8/CSS/style.css
@@ -244,3 +244,8 @@ footer nav a {
 		font-size: 10px;
 	}
 }
+@media all and (max-width: 400px) {
+	#solution{
+		background-position: -200px;
+	}
+}
