--- a/unit_8/CSS/style.css
+++ b/unit_8/CSS/style.css
@@ -249,3 +249,9 @@ footer nav a {
 		background-position: -200px;
 	}
 }
+@media all and (max-width: 650px) {
+	nav a {
+		padding: .40em;
+		font-size: 12px;
+	}
+}
